Design specifics for Menu, Colors, Keynote and Sponsor page (#162)
* Increase menu font size and horizontally align menu items

* Remove lorem ipsum from footer

* Change header background to use radial gradient instead of image

* Change default link colors

* Formatting

* Fix speaker text not visible over background

* Remove minimum height on articles

* Add Russell as Keynote speaker

* Fix sponsorship English and button styles

* Correct Thai font centering

* Increate hr thickness

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -104,32 +104,31 @@
 </div>
 
 <!-- keynote -->
-<div class="section second min-h-screen">
+<div class="section second">
   <div class="keynote mx-8">
     <h2 class="keynote-title red-followline">Keynote Speakers</h2>
     <div class="col-sm-12">
-      <!--
-        TODO
-        <section class="row speaker">
-            <div class="col-sm-3">
-                <img class="img-responsive" src="tiwa-york.jpeg">
-                <p class="name">
-                    Wes Mckinney
-                </p>
-                <p class="org">
-                    KAIDEE<br/>headcoach
-                </p>
-                <p class="website">
-                    <a href="#">http://wesmckinney.com</a>
-                </p>
-            </div>
-            <article class="col-sm-8">
-                <p class="content">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
-                </p>
-            </article>
-        </section>
-      -->
+      <section class="row speaker">
+        <div class="col-sm-3">
+          <img class="img-responsive" src="/russell.png" />
+          <p class="name">Dr Russell Keith-Magee</p>
+          <p class="org">
+            Founding Apiarist at @pybee.<br />@django Core Developer
+          </p>
+          <p class="website">
+            <a href="https://pybee.org">https://pybee.org</a>
+          </p>
+        </div>
+        <article class="col-sm-8">
+          <p class="content">
+            Dr Russell Keith-Magee is a 10 year veteran of the Django core team,
+            and for 5 years, was President of the Django Software Foundation.
+            He's also the founder of the BeeWare project, developing GUI tools
+            to support the development of Python software. When he's not
+            contributing to open source, he's an engineer at Zapier.
+          </p>
+        </article>
+      </section>
     </div>
   </div>
 </div>
