initial russell keynote on frontpage (#159)
* initial russell keynote

* fix image link

* add thai copy of keynote

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -134,6 +134,7 @@
 </div>
 
 
+<!-- sponsor -->
 <section class="section sponsor-section fp-auto-height">
   <div class="container">
     <div class="row">
