--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -35,7 +35,7 @@
 </div>
 
 <!-- news -->
-<div class="section news-section">
+<div class="section news-section"><a id="news"/>
     <div class="row">
         <img
             alt="upside down city"
@@ -103,7 +103,7 @@
 </div>
 
 <!-- keynote -->
-<div class="section second">
+<div class="section second"><a id="keynotes"/>
   <div class="keynote mx-8">
     <h2 class="keynote-title red-followline">Keynote Speakers</h2>
     <div class="col-sm-12">
@@ -134,7 +134,7 @@
 </div>
 
 
-<section class="section sponsor-section fp-auto-height">
+<section class="section sponsor-section fp-auto-height"><a id="submission"/>
   <div class="container">
     <div class="row">
       <section class="welcome-submission w-full">
@@ -157,7 +157,7 @@
 
 
 <!-- sponsor -->
-<section class="section sponsor-section fp-auto-height">
+<section class="section sponsor-section fp-auto-height"><a id="sponsors"/>
   <div class="container">
     <div class="row">
       <section class="welcome-submission w-full">
