--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -39,7 +39,7 @@
 </div>
 
 <!-- news -->
-<div class="section news-section">
+<div class="section news-section"><a id="news"/>
   <div class="row">
     <img
       alt="upside down city"
@@ -104,7 +104,7 @@
 </div>
 
 <!-- keynote -->
-<div class="section second">
+<div class="section second"><a id="keynotes"/>
   <div class="keynote mx-8">
     <h2 class="keynote-title red-followline">Keynote Speakers</h2>
     <div class="col-sm-12">
@@ -135,7 +135,7 @@
 
 
 <!-- sponsor -->
-<section class="section sponsor-section fp-auto-height">
+<section class="section sponsor-section fp-auto-height"><a id="submission"/>
   <div class="container">
     <div class="row">
       <section class="welcome-submission w-full">
@@ -158,7 +158,7 @@
 
 
 <!-- sponsor -->
-<section class="section sponsor-section fp-auto-height">
+<section class="section sponsor-section fp-auto-height"><a id="sponsors"/>
   <div class="container">
     <div class="row">
       <section class="welcome-submission w-full">
