Anchor links fix for homepage (#165)
* Increase menu font size and horizontally align menu items

* Remove lorem ipsum from footer

* Change header background to use radial gradient instead of image

* Change default link colors

* Formatting

* Fix speaker text not visible over background

* Remove minimum height on articles

* Add Russell as Keynote speaker

* Fix sponsorship English and button styles

* Correct Thai font centering

* Increate hr thickness

* Styling for posts pages

* Fix dropdown menu colors

* Add new favicons for all platforms

* Fix anchor id links

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -39,7 +39,7 @@
 </div>
 
 <!-- news -->
-<div class="section news-section"><a id="news"/>
+<div id="news" class="section news-section">
   <div class="row">
     <img
       alt="upside down city"
@@ -104,7 +104,7 @@
 </div>
 
 <!-- keynote -->
-<div class="section second"><a id="keynotes"/>
+<div id="keynotes" class="section second">
   <div class="keynote mx-8">
     <h2 class="keynote-title red-followline">Keynote Speakers</h2>
     <div class="col-sm-12">
@@ -133,9 +133,8 @@
   </div>
 </div>
 
-
 <!-- sponsor -->
-<section class="section sponsor-section fp-auto-height"><a id="submission"/>
+<section id="submission" class="section sponsor-section fp-auto-height">
   <div class="container">
     <div class="row">
       <section class="welcome-submission w-full">
@@ -148,7 +147,10 @@
             We're open to submission for papers now!
           </p>
         </div>
-        <span href="https://www.papercall.io/pyconth19" class="btn-primary btn-lg get-ticket-btn">
+        <span
+          href="https://www.papercall.io/pyconth19"
+          class="btn-primary btn-lg get-ticket-btn"
+        >
           <a href="https://www.papercall.io/pyconth19">Submit Talk</a>
         </span>
       </section>
@@ -156,9 +158,8 @@
   </div>
 </section>
 
-
 <!-- sponsor -->
-<section class="section sponsor-section fp-auto-height"><a id="sponsors"/>
+<section id="sponsors" class="section sponsor-section fp-auto-height">
   <div class="container">
     <div class="row">
       <section class="welcome-submission w-full">
