--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -111,9 +111,10 @@
       <section class="row speaker">
         <div class="col-sm-3">
           <img class="img-responsive" src="/russell.png" />
-          <p class="name">Dr Russell Keith-Magee</p>
+          <a class="name"><a href="https://twitter.com/freakboy3742">Dr Russell Keith-Magee</a></p>
           <p class="org">
-            Founding Apiarist at @pybee.<br />@django Core Developer
+            Founding Apiarist at <a href="https://pybee.org">@pybeeware</a>.<br />
+            <a href="https://www.djangoproject.com/">@djangoproject</a> Core Developer
           </p>
           <p class="website">
             <a href="https://pybee.org">https://pybee.org</a>
@@ -121,11 +122,15 @@
         </div>
         <article class="col-sm-8">
           <p class="content">
-            Dr Russell Keith-Magee is a 10 year veteran of the Django core team,
-            and for 5 years, was President of the Django Software Foundation.
-            He's also the founder of the BeeWare project, developing GUI tools
-            to support the development of Python software. When he's not
-            contributing to open source, he's an engineer at Zapier.
+            Dr Russell Keith-Magee is the founder of the <a href="https://pybee.org">BeeWare project</a>, developing
+            GUI tools and libraries to support
+            the development of Python software on desktop and mobile platforms. He is also a 13 year veteran of the
+            <a href="https://www.djangoproject.com/">Django</a> core team, and for 5 years, was
+            President of the Django Software Foundation. In his day job,
+            he wrangles data pipelines for Survata.<br/>
+            He is a frequent speaker at Python and Django conferences around the globe, sharing his experiences as a
+            FLOSS developer, community maintainer, and (unsuccessful) startup founder. He lives in Whadjuk Noongar
+            country - otherwise known as Perth, Western Australia.
           </p>
         </article>
       </section>
