fix keynote name heading

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -111,7 +111,7 @@
       <section class="row speaker">
         <div class="col-sm-3">
           <img class="img-responsive" src="/russell.png" />
-          <a class="name"><a href="https://twitter.com/freakboy3742">Dr Russell Keith-Magee</a></p>
+          <a class="name">Dr Russell Keith-Magee</p>
           <p class="org">
             Founding Apiarist at <a href="https://pybee.org">@pybeeware</a>.<br />
             <a href="https://www.djangoproject.com/">@djangoproject</a> Core Developer
