--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -134,6 +134,26 @@
           </p>
         </article>
       </section>
+   <section class="row speaker">
+        <div class="col-sm-3">
+          <img class="img-responsive" src="/russell.png" />
+          <p class="name">Adam Paszke</p>
+          <p class="org">
+             Author and maintainer at <a href="https://pytorch.org/">Pytorch</a>
+          </p>
+          <p class="website">
+            <a href="https://pytorch.org/">https://pytorch.org/</a>
+          </p>
+        </div>
+        <article class="col-sm-8">
+          <p class="content">
+            Adam Paszke is an author and maintainer of <a href="https://pytorch.org/">Pytorch</a>.
+            Despite being early in his career he already has a few years of experience working with large organizations 
+            like Facebook AI Research and NVIDIA.
+            Currently, he pursues two majors — Computer Science and Mathematics— at the University of Warsaw.
+          </p>
+        </article>
+      </section>
     </div>
   </div>
 </div>
