--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -134,6 +134,27 @@
           </p>
         </article>
       </section>
+      <section class="row speaker">
+        <div class="col-sm-3">
+          <img class="img-responsive" src="adam.jpeg" />
+          <p class="name">Adam Paszke</p>
+          <p class="org">
+            author and maintainer of  <a href="https://pytorch.org/">PyTorch</a>.<br />
+          </p>
+          <p class="website">
+            <a href="https://pytorch.org/">https://pytorch.org/</a>
+          </p>
+        </div>
+        <article class="col-sm-8">
+          <p class="content">
+            Adam Paszke is an author and maintainer of <a href="https://pytorch.org/">PyTorch</a>
+            Despite being early in his career he already has a few years of experience working with large organizations
+            like Facebook AI Research and NVIDIA.
+            Currently, he pursues two majors — Computer Science and Mathematics — at the University of Warsaw.
+            His general interests include graph theory, programming languages, algorithmics and machine learning.
+          </p>
+        </article>
+      </section>
     </div>
   </div>
 </div>
