--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -136,7 +136,7 @@
       </section>
       <section class="row speaker">
         <div class="col-sm-3">
-          <img class="img-responsive" src="adam.jpeg" />
+          <img class="img-responsive" src="/adam.jpeg" />
           <p class="name">Adam Paszke</p>
           <p class="org">
             author and maintainer of  <a href="https://pytorch.org/">PyTorch</a>.<br />
