--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -97,7 +97,7 @@
       </div>
       <h2 class="countdown-timer" id="countdown-timer"></h2>
       <span class="btn-primary btn-lg get-ticket-btn">
-        {{% doc %}}Buy tickets{{% /doc %}}
+        <a href="https://www.ticketmelon.com/thaiprogrammer/pycon2019/">Buy tickets</a>
       </span>
     </div>
   </div>
