--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -129,6 +129,32 @@
           </p>
         </article>
       </section>
+       <section class="row speaker">
+        <div class="col-sm-3">
+          <img class="img-responsive" src="/katie.jpg" />
+          <p class="name">Katie McLaughlin</p>
+          <p class="org">
+            Cloud Developer Advocate <a href="https://www.google.org/">@google</a>.<br />
+            Director <a href="https://www.python.org/psf/">@Python Software Foundation</a>.<br />
+            Director <a href="https://www.djangoproject.com/foundation/">@Django Software Foundation</a>.<br />
+          </p>
+          <p class="website">
+            <a href="https://www.google.org/">https://www.google.org/</a>
+          </p>
+        </div>
+        <article class="col-sm-8">
+          <p class="content">
+            Katie has worn many different hats over the years. She has been a software developer for many programming 
+            languages, systems administrator for multiple operating systems, and speaker on many different topics.
+            She is currently a Cloud Developer Advocate at Google, a Director of the Python Software Foundation, 
+            a Director of the Django Software Foundation, and Conference Director for PyCon AU 2018/2019. 
+            She won the O’Reilly Open Source Award in 2017, and was a finalist in the Red Hat Women in Open Source Award 
+            in 2018.
+            When she’s not changing the world, she enjoys cooking, making tapestries, and seeing just how well various 
+            application stacks handle emoji.
+          </p>
+        </article>
+      </section>
       <section class="row speaker">
         <div class="col-sm-3">
           <img class="img-responsive" src="/russell.png" />
