--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -145,11 +145,11 @@
         <article class="col-sm-8">
           <p class="content">
             Katie has worn many different hats over the years. She has been a software developer for many programming 
-            languages, systems administrator for multiple operating systems, and speaker on many different topics.
+            languages, systems administrator for multiple operating systems, and speaker on many different topics.<br/>
             She is currently a Cloud Developer Advocate at Google, a Director of the Python Software Foundation, 
-            a Director of the Django Software Foundation, and Conference Director for PyCon AU 2018/2019. 
+            a Director of the Django Software Foundation, and Conference Director for PyCon AU 2018/2019.<br/> 
             She won the O’Reilly Open Source Award in 2017, and was a finalist in the Red Hat Women in Open Source Award 
-            in 2018.
+            in 2018.<br/>
             When she’s not changing the world, she enjoys cooking, making tapestries, and seeing just how well various 
             application stacks handle emoji.
           </p>
@@ -178,6 +178,31 @@
             He is a frequent speaker at Python and Django conferences around the globe, sharing his experiences as a
             FLOSS developer, community maintainer, and (unsuccessful) startup founder. He lives in Whadjuk Noongar
             country - otherwise known as Perth, Western Australia.
+          </p>
+        </article>
+      </section>
+   <section class="row speaker">
+        <div class="col-sm-3">
+          <img class="img-responsive" src="david_cournapeau3.png" />
+          <p class="name">David Cournapeau</p>
+          <p class="org">
+            Data Scientist/Author at <a href="https://scikit-learn.org/stable/">@scikit-learn</a>.<br />
+          </p>
+          <p class="website">
+            <a href="https://scikit-learn.org">https://scikit-learn.org</a>
+          </p>
+        </div>
+        <article class="col-sm-8">
+          <p class="content">
+            David Cournapeau is a data scientist. He is the original author of the scikit-learn package, an open source
+            machine learning library in the Python programming language.<br/>
+            He is a self-described "deployment/packaging geek".<br/> 
+            David graduated with a MSc in Electrical Engineering from Telecom Paristech, Paris in 2004, and obtained his PhD 
+            in Computer Science at Kyoto University, Japan, in the domain of speech recognition.<br/>
+            He joined Cogent Labs in August 2017. As head of the Machine Learning Engineering Team, he plays a pivotal role 
+            at the interface between cutting-edge research and product development. Beyond his work at Cogent Labs, 
+            David is also well known in the open source community as the original author of scikit-learn, and a major 
+            contributor to NumPy and SciPy.<br/>
           </p>
         </article>
       </section>
