--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -183,7 +183,7 @@
       </section>
    <section class="row speaker">
         <div class="col-sm-3">
-          <img class="img-responsive" src="david_cournapeau3.png" />
+          <img class="img-responsive" src="/david_cournapeau3.png" />
           <p class="name">David Cournapeau</p>
           <p class="org">
             Data Scientist/Author at <a href="https://scikit-learn.org/stable/">@scikit-learn</a>.<br />
