--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -98,7 +98,7 @@
       </div>
       <h2 class="countdown-timer" id="countdown-timer"></h2>
       <span class="btn-primary btn-lg get-ticket-btn">
-        <a href="https://www.ticketmelon.com/thaiprogrammer/pycon2019/">Buy tickets</a>
+        <a href="https://th.pycon.org/en/buy-tickets/">Buy tickets</a>
       </span>
     </div>
   </div>
