--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -44,7 +44,7 @@
     <img
       alt="upside down city"
       class="upside-down-city"
-      src="/upside-down-city2.png"
+      src="/upside-down-city.png"
     />
     <div class="news mx-auto -mt-6 max-w-md text-center">
       <h2 class="news-title red-followline italic mt-0">News</h2>
