--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -40,7 +40,7 @@
         <img
             alt="upside down city"
             class="upside-down-city"
-            src="/upside-down-city.png"
+            src="/upside_down_city.png"
         />
         <div class="news mx-auto -mt-6 max-w-md text-center">
             <h2 class="news-title red-followline italic mt-0">แจ้งข่าว</h2>
