--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -180,6 +180,29 @@
           </p>
         </article>
       </section>
+       <section class="row speaker">
+        <div class="col-sm-3">
+          <img class="img-responsive" src="/david_cournapeau3.png" />
+          <p class="name">David Cournapeau</p>
+          <p class="org">
+            นักวิทยาศาสตร์ด้านข้อมูล at <a href="https://scikit-learn.org/stable/">@scikit-learn</a>.<br />
+          </p>
+          <p class="website">
+            <a href="https://scikit-learn.org">https://scikit-learn.org</a>
+          </p>
+        </div>
+        <article class="col-sm-8">
+          <p class="content">
+            David Cournapeau เป็นนักวิทยาศาสตร์ด้านข้อมูล เขาเป็นผู้เขียนต้นฉบับของแพ็คเกจ scikit-learning ซึ่งเป็น 
+            open source machine learning library ในภาษา Python เขาได้ให้คำนิยามตัวเองไว้ว่า "deployment/packaging geek"<br/>
+            เดวิดสำเร็จการศึกษาระดับปริญญาโทด้านวิศวกรรมไฟฟ้าจาก Telecom Paristech, ปารีสในปี 2547 
+            และสำเร็จการศึกษาระดับปริญญาเอกสาขาวิทยาศาสตร์คอมพิวเตอร์ที่มหาวิทยาลัยเกียวโตประเทศญี่ปุ่นในขอบเขตของ speech recognition<br/> 
+            เขาเข้าร่วม Cogent Labs ในเดือนสิงหาคม 2017 ในฐานะหัวหน้าทีมวิศวกรรม Machine Learning 
+            เขามีบทบาทสำคัญในการเชื่อมผ่านระหว่างงานวิจัยที่ทันสมัยและการพัฒนาผลิตภัณฑ์ นอกเหนือจากงานของเขาที่ Cogent Labs แล้ว 
+            David ยังเป็นที่รู้จักกันดีในชุมชนโอเพ่นซอร์สในฐานะผู้แต่ง Scikit-Learn และเป็นผู้สนับสนุนหลักให้ NumPy และ SciPy<br/> 
+          </p>
+        </article>
+      </section>
       </div>
   </div>
 </div>
