--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -222,7 +222,7 @@
           </h2>
           <p class="welcome-submission-text text-sm">
             Join our keynote speakers for the 2nd edition of Pycon Thailand.
-            We're open to submission for papers now!
+          Submit your papers while you can! Closing date is coming soon: 24 May 2019
           </p>
         </div>
         <span
