--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -30,7 +30,7 @@
             Pycon is back! Join us for a two day <br />conference for developers in
             the <br />heart of Bangkok.
         </p>
-    <img class="palm-trees-logo" src="/coconut-tree-with-logo.png" alt="coconut tree logo">
+    <img class="palm-trees-logo" src="logo-with-coconut3.png" alt="coconut tree logo">
     </div>
 </div>
 
@@ -227,58 +227,47 @@
   </div>
 </section>
 
-
 <section id="sponsors" class="section sponsor-section fp-auto-height">
   <div class="container">
     <div class="row">
       <section class="welcome-submission w-full">
         <div class="col-sm-12">
           <h2 class="welcome-submission-title red-prepostline font-bold">
-              SPONSORSHIP IS OPEN
+            Pycon Thailand won't happen without our sponsors and partners
           </h2>
-          <p class="welcome-submission-text text-sm">
-            Limited sponsorship places available now
-          </p>
         </div>
-        <span href="#" class="btn-primary btn-lg get-ticket-btn">
-          {{% doc %}}Sponsorship{{% /doc %}}
-        </span>
       </section>
-      <!--
-        TODO
-        <section class="sponsor col-sm-12">
-            <h2 class="sponsor-title">GOLD SPONSOR</h2>
-            <div class="row">
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-            </div>
-            <h2 class="sponsor-title">SILVER SPONSOR</h2>
-            <div class="row">
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-            </div>
-            -->
-        </section>
+      <section class="welcome-submission w-full">
+        <div class="col-sm-12">
+          <h3 class="welcome-submission-title red-prepostline font-bold">
+            PLATINUM
+          </h3>
+        </div>
+      </section>
+      <section class="welcome-submission w-full">
+        <div class="col-sm-12">
+          <h3 class="welcome-submission-title red-prepostline font-bold">
+            GOLD
+          </h3>
+        </div>
+      </section>
+      <section class="welcome-submission w-full">
+        <div class="col-sm-12">
+          <h3 class="welcome-submission-title red-prepostline font-bold">
+           SILVER
+          </h3>
+        </div>
+      </section>
+    <section class="welcome-submission w-full">
+        <div class="col-sm-12">
+          <h3 class="welcome-submission-title red-prepostline font-bold">
+            INDIVIDUAL/STARTUPS
+          </h3>
+        </div>
+      </section>
+      <span href="#" class="btn-primary btn-lg get-ticket-btn">
+        {{% doc %}}Sponsorship{{% /doc %}}
+      </span>
     </div>
   </div>
 </section>
