--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -214,7 +214,7 @@
           <h2 class="welcome-submission-title red-prepostline font-bold">
             WE WELCOME YOUR SUBMISSION!
           </h2>
-          <p class="welcome-submission-text text-sm">
+          <p class="welcome-submission-text text-sm mb-8">
             Join our keynote speakers for the 2nd edition of Pycon Thailand.
             We're open to submission for papers now!
           </p>
@@ -230,35 +230,35 @@
 <section id="sponsors" class="section sponsor-section fp-auto-height">
   <div class="container">
     <div class="row">
-      <section class="welcome-submission w-full">
+      <section class="text-center w-full">
         <div class="col-sm-12">
           <h2 class="welcome-submission-title red-prepostline font-bold">
             Pycon Thailand won't happen without our sponsors and partners
           </h2>
         </div>
       </section>
-      <section class="welcome-submission w-full">
+      <section class="text-center w-full">
         <div class="col-sm-12">
           <h3 class="welcome-submission-title red-prepostline font-bold">
             PLATINUM
           </h3>
         </div>
       </section>
-      <section class="welcome-submission w-full">
+      <section class="text-center w-full">
         <div class="col-sm-12">
           <h3 class="welcome-submission-title red-prepostline font-bold">
             GOLD
           </h3>
         </div>
       </section>
-      <section class="welcome-submission w-full">
+      <section class="text-center w-full">
         <div class="col-sm-12">
           <h3 class="welcome-submission-title red-prepostline font-bold">
            SILVER
           </h3>
         </div>
       </section>
-    <section class="welcome-submission w-full">
+    <section class="text-center w-full">
         <div class="col-sm-12">
           <h3 class="welcome-submission-title red-prepostline font-bold">
             INDIVIDUAL/STARTUPS
