--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -232,9 +232,9 @@
     <div class="row">
       <section class="text-center w-full">
         <div class="col-sm-12">
-          <h2 class="welcome-submission-title red-prepostline font-bold">
+          <h3 class="welcome-submission-title red-prepostline ">
             Pycon Thailand won't happen without our sponsors and partners
-          </h2>
+          </h3>
         </div>
       </section>
       <section class="text-center w-full">
@@ -265,7 +265,14 @@
           </h3>
         </div>
       </section>
-      <span href="#" class="btn-primary btn-lg get-ticket-btn">
+    <section class="text-center w-full">
+        <div class="col-sm-12">
+          <h3 class="welcome-submission-title red-prepostline font-bold">
+            PARTNERS
+          </h3>
+        </div>
+      </section>
+      <span href="#" class="btn-primary btn-lg get-ticket-btn text-center">
         {{% doc %}}Sponsorship{{% /doc %}}
       </span>
     </div>
