--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -215,7 +215,7 @@
             WE WELCOME YOUR SUBMISSION!
           </h2>
           <p class="welcome-submission-text text-sm mb-8">
-            Join our keynote speakers for the 2nd edition of Pycon Thailand.
+              Join our keynote speakers for the 2nd edition of Pycon Thailand.</br>
             We're open to submission for papers now!
           </p>
         </div>
@@ -272,9 +272,12 @@
           </h3>
         </div>
       </section>
-      <span href="#" class="btn-primary btn-lg get-ticket-btn text-center">
+      <span href="#" class="btn-primary btn-lg get-ticket-btn mx-auto my-4">
         {{% doc %}}Sponsorship{{% /doc %}}
       </span>
+        <p class="welcome-submission-text text-sm mx-auto">
+            Check out our sponsorship packages!
+          </p>
     </div>
   </div>
 </section>
