--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -32,7 +32,7 @@
     </p>
     <img
       class="palm-trees-logo"
-      src="/coconut-tree-with-logo.png"
+      src="/logo-with-coconut3.png"
       alt="coconut tree logo"
     />
   </div>
