--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -232,9 +232,9 @@
     <div class="row">
       <section class="text-center w-full">
         <div class="col-sm-12">
-          <h3 class="welcome-submission-title red-prepostline ">
+           <h2 class="countdown-title red-prepostline font-bold">
             Pycon Thailand won't happen without our sponsors and partners
-          </h3>
+          </h2>
         </div>
       </section>
       <section class="text-center w-full">
