--- a/site/pages/schedule.html
+++ b/site/pages/schedule.html
@@ -7,6 +7,9 @@
 .. description:
 .. type: text
 
-Schedule under construction. More updates coming up.
+
+Schedule under construction. Coming real soon.
+
+<!-- what you dont want to show -->
 <div class="canva-embed" data-design-id="DADZpLpKRmA" data-height-ratio="1.4143" style="padding:141.4286% 5px 5px 5px;background:rgba(0,0,0,0.03);border-radius:8px;"></div>
 <script async src="https:&#x2F;&#x2F;sdk.canva.com&#x2F;v1&#x2F;embed.js"></script>
