--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -237,40 +237,111 @@
           </h2>
         </div>
       </section>
-      <section class="text-center w-full">
-        <div class="col-sm-12">
-          <h3 class="welcome-submission-title red-prepostline font-bold">
-            PLATINUM
-          </h3>
-        </div>
+      <section class="sponsors-section">
+        <h3 class="sponsors-subhead">
+          PLATINUM Sponsors
+        </h3>
+        <!-- <div class="flex justify-between">
+          <a class="sponsors-link" href="#">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/300" />
+            </div>
+          </a>
+
+          <a class="sponsors-link" href="#">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/300" />
+            </div>
+          </a>
+        </div> -->
       </section>
-      <section class="text-center w-full">
-        <div class="col-sm-12">
-          <h3 class="welcome-submission-title red-prepostline font-bold">
-            GOLD
-          </h3>
-        </div>
+      <section class="sponsors-section">
+        <h3 class="sponsors-subhead">
+          GOLD Sponsors
+        </h3>
+        <!-- <div class="flex justify-between">
+          <a class="sponsors-link">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/200" />
+            </div>
+          </a>
+          <a class="sponsors-link">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/200" />
+            </div>
+          </a>
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/200" />
+            </div>
+          </a>
+        </div> -->
       </section>
-      <section class="text-center w-full">
-        <div class="col-sm-12">
-          <h3 class="welcome-submission-title red-prepostline font-bold">
-           SILVER
-          </h3>
-        </div>
+      <section class="sponsors-section">
+        <h3 class="sponsors-subhead">
+          SILVER Sponsors
+        </h3>
+        <!-- <div class="flex justify-between">
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/150" />
+            </div>
+          </a>
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/150" />
+            </div>
+          </a>
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/150" />
+            </div>
+          </a>
+        </div> -->
       </section>
-    <section class="text-center w-full">
-        <div class="col-sm-12">
-          <h3 class="welcome-submission-title red-prepostline font-bold">
-            INDIVIDUAL/STARTUPS
-          </h3>
-        </div>
+      <section class="sponsors-section">
+        <h3 class="sponsors-subhead">
+          INDIVIDUAL/STARTUPS
+        </h3>
+        <!-- <div class="flex justify-between">
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/100" />
+            </div>
+          </a>
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/100" />
+            </div>
+          </a>
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/100" />
+            </div>
+          </a>
+        </div>  -->
       </section>
-    <section class="text-center w-full">
-        <div class="col-sm-12">
-          <h3 class="welcome-submission-title red-prepostline font-bold">
-            PARTNERS
-          </h3>
-        </div>
+      <section class="sponsors-section">
+        <h3 class="sponsors-subhead">
+          PARTNERS
+        </h3>
+        <!-- <div class="flex justify-between">
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/200" />
+            </div>
+          </a>
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/200" />
+            </div>
+          </a>
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/200" />
+            </div>
+          </a>
+        </div> -->
       </section>
       <span href="#" class="btn-primary btn-lg get-ticket-btn mx-auto my-4">
         {{% doc %}}Sponsorship{{% /doc %}}
