Add sponsors section EN

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -253,41 +253,112 @@
           {{% doc %}}Sponsorship{{% /doc %}}
         </span>
       </section>
-      <!--
-        TODO
-        <section class="sponsor col-sm-12">
-            <h2 class="sponsor-title">GOLD SPONSOR</h2>
-            <div class="row">
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
+      <section class="sponsors-section">
+        <h3 class="sponsors-subhead">
+          PLATINUM Sponsors
+        </h3>
+        <!-- <div class="flex justify-between">
+          <a class="sponsors-link" href="#">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/300" />
             </div>
-            <h2 class="sponsor-title">SILVER SPONSOR</h2>
-            <div class="row">
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
+          </a>
+
+          <a class="sponsors-link" href="#">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/300" />
             </div>
-        </section>
-      -->
+          </a>
+        </div> -->
+      </section>
+      <section class="sponsors-section">
+        <h3 class="sponsors-subhead">
+          GOLD Sponsors
+        </h3>
+        <!-- <div class="flex justify-between">
+          <a class="sponsors-link">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/200" />
+            </div>
+          </a>
+          <a class="sponsors-link">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/200" />
+            </div>
+          </a>
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/200" />
+            </div>
+          </a>
+        </div> -->
+      </section>
+      <section class="sponsors-section">
+        <h3 class="sponsors-subhead">
+          SILVER Sponsors
+        </h3>
+        <!-- <div class="flex justify-between">
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/150" />
+            </div>
+          </a>
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/150" />
+            </div>
+          </a>
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/150" />
+            </div>
+          </a>
+        </div> -->
+      </section>
+      <section class="sponsors-section">
+        <h3 class="sponsors-subhead">
+          INDIVIDUAL/STARTUPS
+        </h3>
+        <!-- <div class="flex justify-between">
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/100" />
+            </div>
+          </a>
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/100" />
+            </div>
+          </a>
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/100" />
+            </div>
+          </a>
+        </div>  -->
+      </section>
+      <section class="sponsors-section">
+        <h3 class="sponsors-subhead">
+          PARTNERS
+        </h3>
+        <!-- <div class="flex justify-between">
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/200" />
+            </div>
+          </a>
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/200" />
+            </div>
+          </a>
+          <a class="sponsors-link" href="">
+            <div class="sponsors-card">
+              <img alt="" src="https://placeholder.pics/svg/200" />
+            </div>
+          </a>
+        </div> -->
+      </section>
     </div>
   </div>
 </section>
