--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -233,7 +233,7 @@
       <section class="text-center w-full">
         <div class="col-sm-12">
            <h2 class="countdown-title red-prepostline font-bold">
-            Pycon Thailand won't happen without our sponsors and partners
+            Pycon Thailand จะเกิดขึ้นไม่ได้เลยถ้าขาดผู้สนับสนุนและพันธมิตรของเรา
           </h2>
         </div>
       </section>
