--- a/site/pages/sponsorship.en.html
+++ b/site/pages/sponsorship.en.html
@@ -117,7 +117,7 @@
   of top companies.
 </p>
 <p>
-  Pycon Thailand has a capacity of up to 250 attendees and there are sponsorship
+  Pycon Thailand has a capacity of over 400 attendees and there are sponsorship
   opportunities to fit any budget. Be part of the one and only international
   Python conference in Thailand!
 </p>
@@ -133,7 +133,7 @@
 
 <a
   class="btn btn-primary btn-lg active"
-  href="https://th.pycon.org/Pycon%20prospectusv5-lowres.pdf"
+  href="https://th.pycon.org/Pycon%prospectusv6.pdf"
   >Download Prospectus</a
 >
 
