--- a/site/pages/sponsorship.th.html
+++ b/site/pages/sponsorship.th.html
@@ -127,7 +127,7 @@ type: text
 </p>
 <p>
   นี่เป็นโอกาสของคุณที่จะเข้าถึงคนที่มีอำนาจตัดสินใจและนักพัฒนาจากบริษัทชั้นนำต่างๆ
-  Pycon Thailand สามารถรองรับผู้เข้าร่วมงานได้ถึง 250 คน
+  Pycon Thailand สามารถรองรับผู้เข้าร่วมงานได้ถึง 400 คน
   นั่นหมายความว่าผู้สนับสนุนสามารถช่วยสนับสนุนงานได้ไม่ว่างบจะมากจะน้อยแค่ไหน
   มาร่วมเป็นส่วนหนึ่งของการจัดการสัมมนาเกี่ยวกับ Python
   ครั้งแรกในประเทศไทยและร่วมสร้างประวัติศาสตร์ไปกับเรา
@@ -144,7 +144,7 @@ type: text
 
 <a
   class="btn btn-primary btn-lg active"
-  href="https://th.pycon.org/Pycon%20prospectusv5-lowres.pdf"
+  href="https://th.pycon.org/Pycon%prospectusv6.pdf""
   >Download Prospectus</a
 >
 
