--- a/site/pages/sponsorship.en.html
+++ b/site/pages/sponsorship.en.html
@@ -133,7 +133,7 @@
 
 <a
   class="btn btn-primary btn-lg active"
-  href="https://th.pycon.org/Pycon%prospectusv6.pdf"
+  href="https://th.pycon.org/Pycon%20prospectusv6.pdf"
   >Download Prospectus</a
 >
 
