--- a/site/pages/sponsorship.th.html
+++ b/site/pages/sponsorship.th.html
@@ -144,7 +144,7 @@ type: text
 
 <a
   class="btn btn-primary btn-lg active"
-  href="https://th.pycon.org/Pycon%prospectusv6.pdf""
+  href="https://th.pycon.org/Pycon%20prospectusv6.pdf""
   >Download Prospectus</a
 >
 
