--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -341,10 +341,10 @@
         <h3 class="sponsors-subhead">
           PARTNERS
         </h3>
-        <!-- <div class="flex justify-between">
+        <div class="flex justify-between">
           <a class="sponsors-link" href="">
             <div class="sponsors-card">
-              <img alt="" src="https://placeholder.pics/svg/200" />
+              <img alt="" src="partner-TDPK.png" />
             </div>
           </a>
           <a class="sponsors-link" href="">
