--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -357,7 +357,7 @@
               <img alt="" src="https://placeholder.pics/svg/200" />
             </div>
           </a>
-        </div> -->
+        </div>
       </section>
     </div>
   </div>
