--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -342,7 +342,7 @@
           PARTNERS
         </h3>
         <div class="flex justify-between">
-          <a class="sponsors-link" href="">
+          <a class="http://www.truedigitalpark.com" href="">
             <div class="sponsors-card">
               <img alt="" src="/partner-TDPK.png" />
             </div>
