--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -344,12 +344,12 @@
         <div class="flex justify-between">
           <a class="http://www.truedigitalpark.com" href="">
             <div class="sponsors-card">
-              <img alt="" src="/partner-TDPK.png" />
+              <img alt="" src="/logos-2009/partner-TDPK.png" />
             </div>
           </a>
           <a class="sponsors-link" href="">
             <div class="sponsors-card">
-              <img alt="" src="/partner-ticketmelon.png" />
+              <img alt="" src="/logos-2009/partner-ticketmelon.png" />
             </div>
           </a>
           <a class="sponsors-link" href="">
