--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -342,12 +342,12 @@
           PARTNERS
         </h3>
         <div class="flex justify-between">
-          <a class="http://www.truedigitalpark.com" href="">
+          <a class="sponsors-link" href="http://www.truedigitalpark.com">
             <div class="sponsors-card">
               <img alt="" src="/logos-2009/partner-TDPK.png" />
             </div>
           </a>
-          <a class="sponsors-link" href="">
+          <a class="sponsors-link" href="https://www.ticketmelon.com">
             <div class="sponsors-card">
               <img alt="" src="/logos-2009/partner-ticketmelon.png" />
             </div>
